--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,22 @@ body {
 	}
 }
 
+@media(max-width:414px){
+	.navigation ul{
+		font-size: 9px;
+		margin-top:22px;
+	}
+	.header h1{
+		font-size:38px;
+	}
+	.header h2{
+		font-size:25px;
+	}
+	.feature{
+		height: 450px;
+	}
+
+}
 
 
 
